# C-Programs

./: CMakeLists.txt
src/: ArmstrongNumber.c  DigitSummation.c  Factorial.c  FibonacciSeries.c  FrequencyOfDigit.c  PalindromeNumber.c  PrimeNumber.c  ReverseNumber.c  StringComparison.c  StringConcatenation.c  SwapNumbers.c  main.c
src/matrix_programs/: MatrixAddition.c  MatrixMultiplication.c  MatrixTranspose.c
src/number_system_programs/: DecimalToBinary.c
